--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "8.4.31",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
-    "autoprefixer": "10.4.19"
+    "autoprefixer": "10.4.19",
+    "@types/react": "18.2.66",
+    "@types/node": "20.11.30"
   }
 }
