--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "eslint": "8.57.0",
